--- a/css/styles.css
+++ b/css/styles.css
@@ -73,6 +73,11 @@ body {
 
 .btn:hover { transform: scale(1.1) }
 
+.resume-btn {
+  margin-top: 1em;;
+  position: absolute;
+}
+
 /* Typography */
 /* Headings */
 h1,
@@ -141,7 +146,7 @@ nav {
   color: var(--clr-light);
   text-decoration: none;
   letter-spacing: 1px;
-  font-size: 1rem;
+  font-size: 0.8rem;
 }
 
 .nav-links li {  
