--- a/css/styles.css
+++ b/css/styles.css
@@ -339,7 +339,7 @@ h2 {
 }
 
 /* For centering titles and images that would otherwise looks unorganized on smaller screens */
-@media (max-width: 599px) {
+@media (max-width: 799px) {
   .intro {    
     margin-left: auto;
     margin-right: auto;
@@ -541,83 +541,6 @@ h2 {
   opacity: .5;
 }
 
-
-
-/* contact.html */
-.contact-form {
-  text-align: center;
-  border-radius: 5px;
-  padding: 20px;
-  display: block;
-}
-
-.contact-form h1 {  
-  margin-top: 80px;
-}
-
-form {
-  display: inline-block;
-  max-width: 40%;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
-}
-
-input[type=text], 
-input[type=email], 
-textarea {
-  width: 100%;
-  padding: 15px;
-  padding-left: 30px;
-  border: 1px solid var(--primary-color);
-  border-radius: 40px;
-  box-sizing: border-box;
-  margin-top: 5px;
-  margin-bottom: 10px;
-  resize: none;
-  outline: none;
-  overflow: hidden;
-}
-
-textarea {
-  height: 150px;
-}
-
-input[type=text]:focus, 
-input[type=email]:focus, 
-textarea:focus {
-  background-color: #00808038;
-  border-color: var(--secondary-color);
-}
-
-label {
-  float: left;
-  margin-left: 30px;
-}
-
-.status {
-  margin-bottom: 20px;
-}
-
-.contact-details {
-  max-width: 700px;
-  margin: 0 auto;
-  padding: 50px;
-  padding-top: 10px;
-  padding-bottom: 80px;
-  text-align: center;
-  vertical-align: middle;
-}
-
-
-@media all and (max-width: 750px) {
-  form {
-    max-width: 80%;
-  }
-}
-
-
-
 @media all and (max-width: 300px) {
   .nav-links {
     width: 100%;
@@ -665,4 +588,38 @@ label {
 
 .social-list__link {
   padding: .5em;
+}
+
+/* Portfolio projects */
+.portfolio-item-individual {
+  padding: 0 2em 2em;
+  max-width: 1000px;
+  margin: 0 auto;
+}
+
+.portfolio-item-individual p {
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.extra-info {
+  width: 100%;
+  margin: auto;
+}
+
+.extra-info ul,
+.extra-info ol {
+  width: 70%;
+  margin: auto;
+}
+
+.project-description {
+  padding-bottom: 20px;
+}
+
+@media screen and (min-width: 601px) and (max-width: 799px) {  
+  .project__subtitle  {
+    padding-left: 14em;
+  }
 }
